Layouts for all activities with sampledata

--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RecipesActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/main_recicler_view"
+        android:id="@+id/plants_recicler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/main_item"/>
+        tools:listitem="@layout/recipes_item"/>
 
 </android.support.constraint.ConstraintLayout>
