--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dimen4dp">4dp</dimen>
     <dimen name="dimen8dp">8dp</dimen>
+    <dimen name="dimen42dp">42dp</dimen>
 </resources>
