--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipesActivity">
+    tools:context=".ui.recipes.RecipesActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/plants_recicler_view"
