Navigation to PlantDetails

--- a/app/src/main/res/layout/plant_details_benefits_item.xml
+++ b/app/src/main/res/layout/plant_details_benefits_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/expert_title_text_view"
+            android:id="@+id/benefits_title_text_view"
             style="@style/Base.TextAppearance.AppCompat.Subhead"
             android:layout_width="0dp"
             android:layout_height="28dp"
@@ -19,13 +19,13 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:maxLines="1"
-            android:text="@string/plant_information"
+            android:text="Benefits"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/info_body_text_view"
+            android:id="@+id/benefits_body_text_view"
             style="@style/Base.TextAppearance.AppCompat.Body1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/expert_title_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/benefits_title_text_view"
             tools:maxLines="5"
             tools:text="@tools:sample/lorem/random" />
 
