--- a/app/src/main/res/layout/recipe_step_item.xml
+++ b/app/src/main/res/layout/recipe_step_item.xml
@@ -8,7 +8,7 @@
     <!--tools:showIn="@layout/activity_recipe_details"-->
 
     <TextView
-        android:id="@+id/recipe_step_text_view"
+        android:id="@+id/info_body_text_view"
         style="@style/Base.TextAppearance.AppCompat.Subhead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
