--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="dimen4dp">4dp</dimen>
     <dimen name="dimen8dp">8dp</dimen>
     <dimen name="dimen42dp">42dp</dimen>
+    <dimen name="dimen16dp">16dp</dimen>
 </resources>
