--- a/app/src/main/res/layout/activity_plant_details.xml
+++ b/app/src/main/res/layout/activity_plant_details.xml
@@ -28,18 +28,28 @@
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp">
 
-            <ImageView
-                android:id="@+id/plant_image"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                android:contentDescription="@string/plant_picture_content_description"
-                android:adjustViewBounds="true"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                tools:background="@tools:sample/backgrounds/scenic"
-                android:backgroundTint="#cd000000"
-                app:layout_collapseMode="parallax"/>
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/plant_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    android:contentDescription="@string/plant_picture_content_description"
+                    android:adjustViewBounds="true"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                    tools:background="@tools:sample/backgrounds/scenic"/>
+
+                <View
+                    android:id="@+id/improve_up_and_title_visibility"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#16000000"/>
+
+            </FrameLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
