Navigation and recyclerViews Plants and PlantDetails

--- a/app/src/main/res/layout/activity_plant_details.xml
+++ b/app/src/main/res/layout/activity_plant_details.xml
@@ -25,21 +25,24 @@
             app:toolbarId="@+id/toolbar"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="@color/colorPrimary"
+            app:statusBarScrim="@color/colorPrimaryDark"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax">
 
                 <ImageView
                     android:id="@+id/plant_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:scaleType="centerCrop"
                     android:fitsSystemWindows="true"
                     android:contentDescription="@string/plant_picture_content_description"
-                    android:adjustViewBounds="true"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark"
                     tools:background="@tools:sample/backgrounds/scenic"/>
 
