--- a/app/src/main/res/layout/plant_details_info_item.xml
+++ b/app/src/main/res/layout/plant_details_info_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/dimen4dp">
+    app:cardCornerRadius="@dimen/dimen4dp"
+    tools:showIn="@layout/fragment_plant_details">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
