--- a/app/src/main/res/layout/recipe_ingredients_item.xml
+++ b/app/src/main/res/layout/recipe_ingredients_item.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginStart="@dimen/dimen16dp"
+    android:layout_marginEnd="@dimen/dimen16dp"
+    android:layout_marginTop="@dimen/dimen4dp"
+    android:layout_marginBottom="@dimen/dimen4dp"
     app:cardCornerRadius="@dimen/dimen4dp">
 
     <android.support.constraint.ConstraintLayout
@@ -28,9 +32,11 @@
             android:id="@+id/ingredient_list_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingredients_title_text_view"
