--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -6,6 +6,7 @@
     android:id="@+id/recipe_details_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.recipes.RecipeDetailsActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -22,31 +23,48 @@
             android:fitsSystemWindows="true"
             app:toolbarId="@+id/toolbar"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/colorPrimary"
+            app:statusBarScrim="@color/colorPrimaryDark"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            app:title="@string/app_name" >
+            app:expandedTitleMarginEnd="64dp">
 
-            <ImageView
-                android:id="@+id/plant_image"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                android:contentDescription="@string/plant_picture_content_description"
-                android:adjustViewBounds="true"
-                tools:background="@tools:sample/backgrounds/scenic"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax">
+
+                <ImageView
+                    android:id="@+id/recipe_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    android:contentDescription="@string/recipe_picture_content_description"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                    tools:background="@tools:sample/backgrounds/scenic"/>
+
+                <View
+                    android:id="@+id/improve_up_and_title_visibility"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#16000000"/>
+
+            </FrameLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                tools:title="Recipe Name"/>
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/fragment_recipe_details"/>
+    <FrameLayout android:id="@+id/recipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
