--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp"
+    android:layout_marginStart="@dimen/dimen16dp"
+    android:layout_marginEnd="@dimen/dimen16dp"
+    android:layout_marginTop="@dimen/dimen4dp"
+    android:layout_marginBottom="@dimen/dimen4dp"
     tools:showIn="@layout/activity_main"
     app:cardCornerRadius="@dimen/dimen4dp">
 
