--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".ui.recipes.RecipeDetailsActivity">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         android:elevation="@dimen/dimen4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+        <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="256dp"
@@ -26,7 +27,8 @@
             app:contentScrim="@color/colorPrimary"
             app:statusBarScrim="@color/colorPrimaryDark"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
+            app:expandedTitleMarginEnd="64dp"
+            app:maxLines="3">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -46,10 +48,10 @@
                     tools:background="@tools:sample/backgrounds/scenic"/>
 
                 <View
-                    android:id="@+id/improve_up_and_title_visibility"
+                    android:id="@+id/contrast_scrim"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#16000000"/>
+                    android:background="#2e000000"/>
 
             </FrameLayout>
 
@@ -59,7 +61,7 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-        </android.support.design.widget.CollapsingToolbarLayout>
+        </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout android:id="@+id/recipe_container"
