--- a/app/src/main/res/layout/activity_plants.xml
+++ b/app/src/main/res/layout/activity_plants.xml
@@ -9,6 +9,8 @@
         android:id="@+id/plants_recicler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="@dimen/dimen8dp"
+        android:paddingBottom="@dimen/dimen8dp"
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:listitem="@layout/recipes_item"/>
 
