--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -5,8 +5,8 @@
     android:id="@+id/recipe_details_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/dimen4dp"
-    android:layout_marginBottom="@dimen/dimen4dp"
+    android:paddingTop="@dimen/dimen8dp"
+    android:paddingBottom="@dimen/dimen8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
     tools:listitem="@layout/recipe_switch_item"
