--- a/app/src/main/res/layout/recipes_item.xml
+++ b/app/src/main/res/layout/recipes_item.xml
@@ -4,7 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginStart="@dimen/dimen16dp"
+    android:layout_marginEnd="@dimen/dimen16dp"
+    android:layout_marginTop="@dimen/dimen4dp"
+    android:layout_marginBottom="@dimen/dimen4dp"
+    android:clickable="@bool/is_tablet"
+    android:focusable="@bool/is_tablet"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/dimen4dp"
     tools:showIn="@layout/activity_recipes">
 
