--- a/app/src/main/res/layout-sw600dp/activity_recipes.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipes.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recipes_recicler_view"
+        android:id="@+id/recipes_recycler_view"
+        style="@style/recycler_style"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:paddingBottom="@dimen/dimen8dp"
-        android:paddingTop="@dimen/dimen8dp"
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:listitem="@layout/recipes_item" />
 
