--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -6,12 +6,9 @@
     tools:context=".ui.recipes.RecipesActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recipes_recicler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/dimen8dp"
-        android:paddingBottom="@dimen/dimen8dp"
+        android:id="@+id/recipes_recycler_view"
+        style="@style/recycler_style"
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/recipes_item"/>
+        tools:listitem="@layout/recipes_item" />
 
 </FrameLayout>
