--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dimen0dp">0dp</dimen>
     <dimen name="dimen4dp">4dp</dimen>
     <dimen name="dimen8dp">8dp</dimen>
     <dimen name="dimen42dp">42dp</dimen>
