refactor and ui selectView

--- a/app/src/main/res/layout/recipes_item.xml
+++ b/app/src/main/res/layout/recipes_item.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/dimen16dp"
-    android:layout_marginEnd="@dimen/dimen16dp"
-    android:layout_marginTop="@dimen/dimen4dp"
-    android:layout_marginBottom="@dimen/dimen4dp"
-    android:clickable="@bool/is_tablet"
-    android:focusable="@bool/is_tablet"
-    android:foreground="?android:attr/selectableItemBackground"
+    style="@style/card_item"
     app:cardCornerRadius="@dimen/dimen4dp"
     tools:showIn="@layout/activity_recipes">
 
