--- a/app/src/main/res/layout/default_item.xml
+++ b/app/src/main/res/layout/default_item.xml
@@ -23,15 +23,26 @@
 
     <TextView
         android:id="@+id/item_text_view"
+        style="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/item_image_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        style="@style/Base.TextAppearance.AppCompat.Large"
         android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_image_view"
         tools:text="@tools:sample/lorem" />
+
+    <View
+        android:id="@+id/select_view"
+        android:layout_width="0dp"
+        android:layout_height="4dp"
+        android:background="@color/colorAccent"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
