--- a/app/src/main/res/layout/plant_details_item.xml
+++ b/app/src/main/res/layout/plant_details_item.xml
@@ -13,31 +13,17 @@
 
         <ImageView
             android:id="@+id/detail_image_view"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/profile_picture_content_description"
+            style="@style/detail_image_style"
+            android:contentDescription="@string/image_content_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            tools:src="@tools:sample/avatars"
-            tools:visibility="visible"/>
+            tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/detail_title_text_view"
-            style="@style/Base.TextAppearance.AppCompat.Subhead"
-            android:layout_width="0dp"
-            android:layout_height="28dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:paddingStart="@dimen/dimen8dp"
-            android:paddingEnd="@dimen/dimen8dp"
-            android:maxLines="1"
-            android:visibility="visible"
+            style="@style/detail_title_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/detail_image_view"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,14 +32,13 @@
 
         <WebView
             android:id="@+id/detail_body_web_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
+            style="@style/detail_body_style"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/detail_title_text_view"
-            app:layout_constraintStart_toStartOf="@id/detail_title_text_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/detail_image_view"
             app:layout_constraintTop_toBottomOf="@+id/detail_title_text_view"
+            app:layout_goneMarginStart="@dimen/dimen16dp"
+            app:layout_goneMarginTop="@dimen/dimen0dp"
             tools:text="@string/lorem_m" />
 
     </android.support.constraint.ConstraintLayout>
