implement navigation to recipe on plant details

--- a/app/src/main/res/layout/fragment_plant_details.xml
+++ b/app/src/main/res/layout/fragment_plant_details.xml
@@ -4,11 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="false"
+    android:focusable="false"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.plants.PlantDetailsActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/plant_details_recycler_view"
+        android:focusableInTouchMode="false"
+        android:focusable="false"
         style="@style/recycler_style"
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:listitem="@layout/details_item"/>
