--- a/app/src/main/res/layout/activity_get_involved.xml
+++ b/app/src/main/res/layout/activity_get_involved.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.GetInvolvedActivity">
+    tools:context=".ui.getInvolved.GetInvolvedActivity">
 
-    <include layout="@layout/lorem_text_views" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/get_involved_recycler_view"
+        style="@style/recycler_style"
+        tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/details_item" />
 
 </FrameLayout>
