--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:elevation="@dimen/dimen4dp"
+        tools:ignore="UnusedAttribute"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
@@ -43,7 +44,7 @@
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"
                     android:fitsSystemWindows="true"
-                    android:contentDescription="@string/recipe_picture_content_description"
+                    android:contentDescription="@string/image_content_description"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark"
                     tools:background="@tools:sample/backgrounds/scenic"/>
 
