--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,4 +67,14 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="FabStyle" parent="Widget.Design.FloatingActionButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/dimen16dp</item>
+        <item name="android:src">@drawable/ic_heart_outline</item>
+        <item name="borderWidth">0dp</item>
+        <item name="pressedTranslationZ">12dp</item>
+        <item name="rippleColor">@android:color/white</item>
+    </style>
+
 </resources>
