--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,6 +71,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/dimen16dp</item>
+        <item name="android:contentDescription">@string/favourite</item>
         <item name="android:src">@drawable/ic_heart_outline</item>
         <item name="borderWidth">0dp</item>
         <item name="pressedTranslationZ">12dp</item>
