small lint fixes

--- a/app/src/main/res/xml/comfrey_widget_info.xml
+++ b/app/src/main/res/xml/comfrey_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/widget_plants"
     android:minHeight="110dp"
     android:minWidth="110dp"
-    android:previewImage="@mipmap/ic_launcher"
+    android:previewImage="@drawable/appwidget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="5000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen"/>
